src/Resources/styles/front/common/helpers/main.less
.text-right {text-align: right}
.text-left {text-align: left}
.text-center {text-align: center}
.text-muted {color: @color-inactive}
.text-no-wrap {white-space: nowrap}
.text-wrap {
    word-break: break-all;
    word-wrap: break-word;
}

.clear {clear: both}
.clearfix {.clearfix()}
.position-relative {position: relative}

.float-left {float: left}
.float-right {float: right}
.float-none {float: none}

.cursor-pointer {cursor: pointer}
.cursor-move {cursor: move}
.cursor-auto {cursor: auto}
.cursor-help {cursor: help}

.underline {
    position: relative;

    &:before {
        content: '';
        position: absolute;
        display: block;
        height: 1px;
        width: 100%;
        left: 0;
        bottom: -@underline-gap;

        background-color: @color-gray-light;
        transition: bottom @transition;
    }

    &:hover {
        &:before {
            bottom: -@underline-gap-hover;
        }
    }

    &--light {
        &:before {
            background-color: @color-f;
            opacity: 0.2;
        }
    }

    &--hard {
        &:before {
            bottom: -17px;
            height: 3px;
        }

        &:hover {
            &:before {
                bottom: -10px;
            }
        }
    }
}

.underline-text {
    display: inline;
    padding-bottom: 10px;

    background-image: linear-gradient(to top, @color-gray-light 1px, @color-f 100%);
    background-position: 0 21px;
    background-repeat: repeat-x;
    background-size: 2px 1px;
    transition: background-position @transition;

    &:hover {
        background-position: 0 21px;
        transition: background-position @transition;
    }
}

.underline-small {
    position: relative;

    &:before {
        content: '';
        position: absolute;
        display: block;
        height: 1px;
        width: 100%;
        left: 0;
        bottom: -2px;

        background-color: @color-gray-light;
    }

    &:hover {
        &:before {
            bottom: 0;
            transition: bottom @transition;
        }
    }
}

.double-lined {
    position: relative;

    &:before {
        content: '';
        position: absolute;
        display: block;
        height: 2px;
        width: 100%;
        left: 0;
        top: -8px;

        background-color: @color-add;
    }

    &:after {
        content: '';
        position: absolute;
        display: block;
        height: 2px;
        width: 100%;
        left: 0;
        bottom: -7px;

        background-color: @color-add;
    }
}

.double-lined-hard {
    position: relative;

    &:before {
        content: '';
        position: absolute;
        display: block;
        height: 5px;
        width: 100%;
        left: 0;
        bottom: 87px;

        background-color: @color-add;
    }

    &--error {
        &:before {
            bottom: 120px;
        }
    }

    &:after {
        content: '';
        position: absolute;
        display: block;
        height: 5px;
        width: 100%;
        left: 0;
        bottom: -22px;

        background-color: @color-add;
    }
}

.full-width {
    width: 100%;
}

.youtubeWrapper {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 25px;
    height: 0;

    iframe {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}

